# hexx

./: .gitignore  .rustfmt.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docs.yml  rust.yml
assets/kenney/: License.txt
benches/: conversions.rs  creation.rs  length.rs  lines.rs  maps.rs  rings.rs  simd.rs  storage.rs  storage_creation.rs  wedges.rs
examples/: 3d_columns.rs  3d_picking.rs  a_star.rs  chunks.rs  field_of_movement.rs  field_of_view.rs  fov.rs  heightmap_builder.rs  hex_area.rs  hex_grid.rs  merged_columns.rs  mesh_builder.rs  rect_map.rs  resolution_grid.rs  scroll_map.rs  shapes.rs  sprite_sheet.rs  wrap_map.rs
src/: bounds.rs  conversions.rs  direction.rs  hex.rs  hex_layout.rs  hex_map.rs  hex_mesh.rs  layout.rs  lib.rs  mesh.rs  orientation.rs  shapes.rs  storage.rs
src/algorithms/: field_of_movement.rs  fov.rs  mod.rs  pathfinding.rs
src/direction/: diagonal_direction.rs  edge_direction.rs  hex_direction.rs  impls.rs  mod.rs  tests.rs  vertex_direction.rs  way.rs
src/hex/: convert.rs  euclidean.rs  impls.rs  iter.rs  mod.rs  ord.rs  packed.rs  rings.rs  simd.rs  siwzzle.rs  tests.rs
src/hex/grid/: edge.rs  mod.rs  vertex.rs
src/mesh/: column_builder.rs  face.rs  heightmap_builder.rs  mod.rs  outline_builder.rs  plane_builder.rs  tests.rs  utils.rs  uv_mapping.rs
src/storage/: hexagonal.rs  hexmod.rs  mod.rs  rect.rs  rectangle.rs  rombus.rs
