[package]
name = "hexx"
version = "0.14.0"
edition = "2021"
authors = ["Felix de Maneville <felix.maneville@gmail.com>"]
description = "Hexagonal utilities"
license = "Apache-2.0"
keywords = ["hexagon", "bestagon", "bevy", "geometry"]
categories = ["game-development", "mathematics"]
repository = "https://github.com/ManevilleF/hexx"
exclude = [".github"]
resolver = "2"
rust-version = "1.74.1"

[features]
default = ["algorithms", "mesh"]
# HL algoritms
algorithms = []
# 3d Mesh features
mesh = ["serde?/std"]
# repr C
packed = []
# serde compatibility
serde = ["dep:serde", "glam/serde"]
# Old serde compat feature
ser_de = ["serde"]
# Adds Bevy Reflection support
bevy_reflect = ["dep:bevy_reflect"]

[dependencies]
glam = "0.24"

[dependencies.serde]
version = "1"
default-features = false
features = ["derive"]
optional = true

[dependencies.bevy_reflect]
version = "0.12"
default-features = false
features = ["glam"]
optional = true

# For lib.rs doctests and examples
[dev-dependencies.bevy]
version = "0.12"
features = [
  "bevy_asset",
  "bevy_winit",
  "bevy_core_pipeline",
  "bevy_pbr",
  "bevy_render",
  "bevy_sprite",
  "bevy_text",
  "default_font",
  "png",
  "x11",
  "tonemapping_luts",
  "bevy_gizmos",
  # Faster compilation
  "dynamic_linking",
]
default-features = false

[dev-dependencies.criterion]
version = "0.5"
features = ["html_reports"]

[dev-dependencies]
rand = "0.8"
bevy-inspector-egui = "0.22"
bevy_egui = "0.24"

[[example]]
name = "hex_grid"
path = "examples/hex_grid.rs"

[[example]]
name = "scroll_map"
path = "examples/scroll_map.rs"

[[example]]
name = "wrap_map"
path = "examples/wrap_map.rs"

[[example]]
name = "a_star"
path = "examples/a_star.rs"

[[example]]
name = "field_of_view"
path = "examples/field_of_view.rs"

[[example]]
name = "field_of_movement"
path = "examples/field_of_movement.rs"

[[example]]
name = "3d_columns"
path = "examples/3d_columns.rs"

[[example]]
name = "mesh_builder"
path = "examples/mesh_builder.rs"
required-features = ["bevy_reflect"]

[[example]]
name = "chunks"
path = "examples/chunks.rs"

[[example]]
name = "merged_columns"
path = "examples/merged_columns.rs"
required-features = ["bevy_reflect"]

[[example]]
name = "sprite_sheet"
path = "examples/sprite_sheet.rs"

[[bench]]
name = "length"
harness = false

[[bench]]
name = "wedges"
harness = false

[[bench]]
name = "lines"
harness = false

[[bench]]
name = "rings"
harness = false

[profile.dev]
opt-level = 1
