[package]
name = "hexx"
version = "0.23.0"
edition = "2024"
authors = ["Felix de Maneville <felix.maneville@gmail.com>"]
description = "Hexagonal utilities"
license = "Apache-2.0"
keywords = ["hexagon", "bestagon", "bevy", "geometry"]
categories = ["game-development", "mathematics", "graphics", "data-structures"]
repository = "https://github.com/ManevilleF/hexx"
exclude = [".github"]
resolver = "3"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["algorithms", "mesh", "grid"]
# HL algoritms
algorithms = []
# 3d Mesh features
mesh = ["serde?/std"]
# Grid management utilities
grid = []
# repr C
packed = []
# serde compatibility
serde = ["dep:serde", "glam/serde"]
# facet compatibility
facet = ["dep:facet"]
# rayon support
rayon = ["dep:rayon"]
# Adds support for the Bevy game engine
bevy = ["bevy_reflect", "bevy_platform", "bevy_ecs"]
# Adds Bevy Reflection support
bevy_reflect = ["dep:bevy_reflect"]
# Adds Bevy Platform support
bevy_platform = ["dep:bevy_platform"]
# Adds Bevy ECS support
bevy_ecs = ["dep:bevy_ecs"]

[dependencies]
glam = "0.30"

[dependencies.rayon]
version = "1.11"
optional = true

[dependencies.serde]
version = "1"
default-features = false
features = ["derive"]
optional = true

[dependencies.facet]
version = "0.31"
default-features = false
optional = true

[dependencies.bevy_reflect]
version = "0.18"
default-features = false
features = ["glam"]
optional = true

[dependencies.bevy_platform]
version = "0.18"
optional = true

[dependencies.bevy_ecs]
version = "0.18"
optional = true

# For lib.rs doctests and examples
[dev-dependencies.bevy]
version = "0.18"
features = [
    "std",
    # "async_executor",
    # "android-game-activity",
    # "android_shared_stdcxx",
    # "animation",
    "bevy_asset",
    # "bevy_audio",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_post_process",
    # "bevy_anti_alias",
    # "bevy_gilrs",
    "bevy_gizmos",
    "bevy_gizmos_render",
    # "bevy_gltf",
    # "bevy_input_focus",
    "bevy_log",
    # "bevy_mesh_picking_backend",
    "bevy_pbr",
    "bevy_picking",
    "bevy_render",
    # "bevy_scene",
    "bevy_image",
    "bevy_mesh",
    "bevy_camera",
    "bevy_light",
    "bevy_shader",
    "bevy_sprite",
    # "bevy_sprite_picking_backend",
    "bevy_sprite_render",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    # "bevy_ui_picking_backend",
    "bevy_ui_render",
    "bevy_window",
    "bevy_winit",
    # "custom_cursor",
    "default_font",
    # "hdr",
    # "ktx2",
    "multi_threaded",
    "png",
    "reflect_auto_register",
    # "smaa_luts",
    # "sysinfo_plugin",
    "tonemapping_luts",
    # "vorbis",
    # "webgl2",
    "x11",
    # "wayland",
    # "debug",
    # "zstd_rust",
]
default-features = false

[dev-dependencies.criterion]
version = "0.8"
features = ["html_reports"]

[dev-dependencies]
rand = "0.9"
bevy-inspector-egui = "0.36"
bevy_egui = "0.39"
approx = "0.5"


[[example]]
name = "hex_grid"
path = "examples/hex_grid.rs"
required-features = ["bevy_platform"]

[[example]]
name = "hex_area"
path = "examples/hex_area.rs"
required-features = ["bevy_platform"]

[[example]]
name = "scroll_map"
path = "examples/scroll_map.rs"
required-features = ["bevy_platform"]

[[example]]
name = "wrap_map"
path = "examples/wrap_map.rs"
required-features = ["bevy_platform"]

[[example]]
name = "a_star"
path = "examples/a_star.rs"
required-features = ["bevy_platform"]

[[example]]
name = "field_of_view"
path = "examples/field_of_view.rs"
required-features = ["bevy_platform"]

[[example]]
name = "field_of_movement"
path = "examples/field_of_movement.rs"
required-features = ["bevy_platform"]

[[example]]
name = "3d_columns"
path = "examples/3d_columns.rs"
required-features = ["bevy_platform"]

[[example]]
name = "3d_picking"
path = "examples/3d_picking.rs"
required-features = ["bevy_platform"]

[[example]]
name = "rect_map"
path = "examples/rect_map.rs"
required-features = ["bevy_platform", "bevy_ecs"]

[[example]]
name = "mesh_builder"
path = "examples/mesh_builder.rs"
required-features = ["bevy_reflect"]

[[example]]
name = "heightmap_builder"
path = "examples/heightmap_builder.rs"
required-features = ["bevy_reflect"]

[[example]]
name = "chunks"
path = "examples/chunks.rs"

[[example]]
name = "resolutions"
path = "examples/resolution_grid.rs"
required-features = ["bevy_platform", "bevy_reflect"]

[[example]]
name = "merged_columns"
path = "examples/merged_columns.rs"
required-features = ["bevy_reflect"]

[[example]]
name = "sprite_sheet"
path = "examples/sprite_sheet.rs"
required-features = ["bevy_platform"]

[[example]]
name = "shapes"
path = "examples/shapes.rs"
required-features = ["bevy_reflect"]

[[bench]]
name = "conversions"
harness = false

[[bench]]
name = "length"
harness = false

[[bench]]
name = "wedges"
harness = false

[[bench]]
name = "lines"
harness = false

[[bench]]
name = "rings"
harness = false

[[bench]]
name = "storage"
harness = false
required-features = ["bevy_platform"]

[[bench]]
name = "storage_creation"
harness = false
required-features = ["rayon"]

[profile.dev]
opt-level = 1

[lints.rust]
nonstandard_style = "warn"
future_incompatible = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_arch, values("spirv"))',
] }
